<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="qa.edu.qu.cse.cmps497.homework6.DetailsActivity" android:stretchColumns="1">

    <TableRow>
        <TextView android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/title"
            android:textStyle="bold"
            android:layout_weight="0.3"/>
        <TextView android:layout_width="0px"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:layout_weight="0.7"
            />
    </TableRow>

    <TableRow>
        <TextView android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/summary"
            android:textStyle="bold"
            android:layout_weight="0.3"/>
        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/summary"
            android:layout_weight="0.7"
            />
    </TableRow>
    <TableRow>
        <TextView android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/purpose"
            android:textStyle="bold"
            android:layout_weight="0.3"/>
        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/purpose"
            android:singleLine="false"
            android:layout_weight="0.7"
            />
    </TableRow>
    <TableRow>
        <TextView android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/due_date"
            android:textStyle="bold"
            android:layout_weight="0.3"/>
        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/due"
            android:layout_weight="0.7"
            />
    </TableRow>
    <TableRow>
        <TextView android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/total_points"
            android:textStyle="bold"
            android:layout_weight="0.3"/>
        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/points"
            android:layout_weight="0.7"
            />
    </TableRow>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:visibility="visible" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBar"
            android:text="@string/loading_image"
            android:layout_centerHorizontal="true"
            android:id="@+id/textview_wait"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:visibility="gone"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</TableLayout>
